@@ -88,7 +88,12 @@ xymon (4.4.0-alpha1) unstable; urgency=low
      messages).
    * xymonnet: support a --bfq/--no-bfq option for automatically sensing the
      presence of a feedback queue when running on a xymond server
-   
+   * xymond_client: support a --bfq/--no-bfq option for automatically sensing the 
+     presence of a feedback queue when running on a xymond server
+   * xymond_client: --flushtimeout option to use normal combo functioning every
+     X seconds (at most) instead of sending one combo message per source client.  
+     TODO: These options should be factored out into stdopt.c
+
    * FIXME-doc: Add --no-cookies and --no-save-cookies (read but don't 
      write) to xymonnet
    * FIXME-doc: Add hidden tunables for controlling flushing to the external 
